# garmin-backup

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
src/: activities.py  garmin-backup.py  garmin_backup.py  setup.py
tests/: conftest.py  not_test_codeium.py  test_garmin-backup.py
